[gd_scene load_steps=24 format=3 uid="uid://dsw4i7jsr1ank"]

[ext_resource type="Script" uid="uid://cio4jt3snka3a" path="res://characters/player.gd" id="1_dnjla"]
[ext_resource type="PackedScene" uid="uid://cinqt7u3thb8x" path="res://characters/arma_1/proyectil_1.tscn" id="2_3eadt"]
[ext_resource type="Script" uid="uid://x117siqlqcjd" path="res://characters/tipos_de_disparo.gd" id="2_tory2"]
[ext_resource type="PackedScene" uid="uid://ijnuhkyu1p5v" path="res://characters/arma_2/proyectil_escopeta.tscn" id="4_x0jl3"]
[ext_resource type="PackedScene" uid="uid://dmmsr1jg6ygje" path="res://characters/arma_2/escopeta.tscn" id="5_evndh"]
[ext_resource type="Script" uid="uid://8b6nhkdm1grq" path="res://characters/HUD.gd" id="5_j31ep"]
[ext_resource type="Script" uid="uid://c4q4oc5k2dwcr" path="res://characters/camera_2d.gd" id="6_6t23p"]
[ext_resource type="Texture2D" uid="uid://dmxmsqw12qmic" path="res://assets/armas/BalaEscopeta1.png" id="6_eho78"]
[ext_resource type="Theme" uid="uid://c4m6khe7g8laj" path="res://ui/textos.tres" id="6_eus45"]
[ext_resource type="PackedScene" uid="uid://bnc8jhogm34ob" path="res://characters/arma_1/revolver.tscn" id="6_h1q25"]
[ext_resource type="Theme" uid="uid://dkyewq7cvwqdd" path="res://barras_vida_theme.tres" id="6_vcag3"]
[ext_resource type="Texture2D" uid="uid://ch4nkvhahqa1r" path="res://assets/armas/BalaRevolver.png" id="7_8sqrr"]
[ext_resource type="Texture2D" uid="uid://c2xst5wtkpsw0" path="res://assets/dash-icon.png" id="8_eho78"]
[ext_resource type="Texture2D" uid="uid://pjtgmbjd2788" path="res://assets/armas/Escopeta.png" id="12_6rrl0"]
[ext_resource type="Texture2D" uid="uid://bjxmwog5kbtud" path="res://assets/armas/RevolverTambor.png" id="13_eus45"]

[sub_resource type="Gradient" id="Gradient_hlbhx"]
offsets = PackedFloat32Array(0, 0.675325)
colors = PackedColorArray(1, 1, 0.803922, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_eho78"]
gradient = SubResource("Gradient_hlbhx")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="Gradient" id="Gradient_8sqrr"]
offsets = PackedFloat32Array(0.214286, 0.805195)
colors = PackedColorArray(1, 1, 0.803922, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_h1q25"]
gradient = SubResource("Gradient_8sqrr")
fill = 1
fill_from = Vector2(0.0504587, 0.0550459)
fill_to = Vector2(0.8, 0.8)

[sub_resource type="Gradient" id="Gradient_eho78"]
offsets = PackedFloat32Array(0, 0.766234)
colors = PackedColorArray(1, 1, 0.803922, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_j31ep"]
gradient = SubResource("Gradient_eho78")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_6p3mc"]
radius = 28.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eus45"]
bg_color = Color(0.887659, 0.754752, 0.600094, 1)

[node name="Player" type="CharacterBody2D" groups=["player"]]
position = Vector2(640, 361)
collision_mask = 27
motion_mode = 1
script = ExtResource("1_dnjla")

[node name="PointLight2D3" type="PointLight2D" parent="."]
position = Vector2(6, 2)
rotation = -0.78642
scale = Vector2(15.019, 15.019)
energy = 1.8
blend_mode = 2
range_item_cull_mask = 9
shadow_enabled = true
shadow_item_cull_mask = 9
texture = SubResource("GradientTexture2D_eho78")

[node name="PointLight(linterna)" type="PointLight2D" parent="."]
light_mask = 9
visibility_layer = 9
position = Vector2(123, 1)
rotation = -0.78642
scale = Vector2(3.0038, 3.0038)
energy = 2.5
blend_mode = 2
range_item_cull_mask = 9
shadow_enabled = true
shadow_filter_smooth = 1.0
shadow_item_cull_mask = 9
texture = SubResource("GradientTexture2D_h1q25")
offset = Vector2(40.8991, 41.0516)
texture_scale = 2.0

[node name="PointLight(area)" type="PointLight2D" parent="."]
visible = false
light_mask = 8
visibility_layer = 8
scale = Vector2(4, 4)
energy = 3.0
blend_mode = 2
range_item_cull_mask = 9
shadow_enabled = true
shadow_item_cull_mask = 9
texture = SubResource("GradientTexture2D_j31ep")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_6p3mc")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -27.0
offset_top = -23.0
offset_right = 27.0
offset_bottom = 25.0
color = Color(0.979542, 0.371125, 0.112457, 1)

[node name="Label" type="Label" parent="."]
offset_left = -24.0
offset_top = -12.0
offset_right = 25.0
offset_bottom = 11.0
text = "player"

[node name="weapon" type="Node2D" parent="."]
script = ExtResource("2_tory2")
projectile_scene_1 = ExtResource("2_3eadt")
projectile_scene_2 = ExtResource("4_x0jl3")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 8
script = ExtResource("5_j31ep")

[node name="hud-porta-balas" type="ColorRect" parent="CanvasLayer"]
offset_left = 36.0
offset_top = 618.0
offset_right = 209.0
offset_bottom = 670.0
color = Color(0.27451, 0.27451, 0.27451, 0.317647)

[node name="Cargador_balas" type="HBoxContainer" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 45.0
offset_top = -94.0
offset_right = 453.0
offset_bottom = 200.0
grow_vertical = 0
scale = Vector2(0.12, 0.12)

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
offset_left = 77.0
offset_top = 662.0
offset_right = 169.0
offset_bottom = 666.0
theme_override_styles/fill = SubResource("StyleBoxFlat_eus45")
step = 1.0
value = 50.0
show_percentage = false

[node name="BarraVida" type="ProgressBar" parent="CanvasLayer"]
unique_name_in_owner = true
offset_left = 78.0
offset_top = 588.0
offset_right = 206.0
offset_bottom = 600.0
theme = ExtResource("6_vcag3")
value = 50.0
rounded = true
show_percentage = false

[node name="Label" type="Label" parent="CanvasLayer"]
offset_left = 41.0
offset_top = 584.0
offset_right = 81.0
offset_bottom = 607.0
theme = ExtResource("6_eus45")
text = "Vida"

[node name="balasRevolver" type="Label" parent="CanvasLayer"]
offset_left = 249.0
offset_top = 599.0
offset_right = 358.0
offset_bottom = 623.0
theme = ExtResource("6_eus45")
text = "balas revolver"

[node name="balasEscopeta" type="Label" parent="CanvasLayer"]
offset_left = 246.0
offset_top = 639.0
offset_right = 370.0
offset_bottom = 690.0
theme = ExtResource("6_eus45")
text = "balas escopeta
"

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer"]
offset_left = 224.0
offset_top = 630.0
offset_right = 364.0
offset_bottom = 924.0
scale = Vector2(0.1, 0.1)
texture = ExtResource("6_eho78")

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
offset_left = 225.0
offset_top = 591.0
offset_right = 355.0
offset_bottom = 885.0
scale = Vector2(0.1, 0.1)
texture = ExtResource("7_8sqrr")

[node name="Dash-icon" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(401, 624)
scale = Vector2(0.273504, 0.273504)
texture = ExtResource("8_eho78")

[node name="icon-Escopeta" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(187, 693)
rotation = -0.509837
scale = Vector2(0.109785, 0.109785)
texture = ExtResource("12_6rrl0")

[node name="icon-Revolver" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(79, 692)
scale = Vector2(0.088773, 0.088773)
texture = ExtResource("13_eus45")

[node name="puntaje" type="Label" parent="CanvasLayer"]
offset_left = 76.0
offset_top = 52.0
offset_right = 116.0
offset_bottom = 75.0
theme = ExtResource("6_eus45")
text = "Enemigos Purgados"

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_enabled = true
rotation_smoothing_enabled = true
script = ExtResource("6_6t23p")

[node name="WeaponSlots" type="Node2D" parent="."]

[node name="Revolver" parent="WeaponSlots" instance=ExtResource("6_h1q25")]

[node name="markerRevolver" type="Marker2D" parent="WeaponSlots/Revolver"]
unique_name_in_owner = true
position = Vector2(57, 0)

[node name="Escopeta" parent="WeaponSlots" instance=ExtResource("5_evndh")]

[node name="markerEscopeta" type="Marker2D" parent="WeaponSlots/Escopeta"]
unique_name_in_owner = true
position = Vector2(87, 0)

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
